--- a/packages/muelu/research/regionMG/test/structured/CMakeLists.txt
+++ b/packages/muelu/research/regionMG/test/structured/CMakeLists.txt
@@ -33,7 +33,7 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     )
 
   ## These are some completion tests
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_1.log"
@@ -41,15 +41,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_GS"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_GS_1.log --smootherType=Gauss"
@@ -57,15 +57,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_GS"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_GS_4.log --smootherType=Gauss"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_SGS"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --smootherType=SymmetricGauss"
@@ -73,15 +73,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_SGS"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --smootherType=SymmetricGauss"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_CoarseSmoother_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --coarseSolverType=smoother --coarseSmootherXML=coarse_smoother.xml"
@@ -89,15 +89,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_CoarseSmoother_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --coarseSolverType=smoother --coarseSmootherXML=coarse_smoother.xml"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_Chebyshev"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_Chebyshev_1.log --smootherType=Chebyshev --smootherChebyBoostFactor=1.2"
@@ -105,19 +105,19 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_Chebyshev"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_Chebyshev_4.log --smootherType=Chebyshev --smootherChebyBoostFactor=1.2"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_AMG_CoarseSolver_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof_3level.xml --matrixType=Star2D --nx=50 --ny=50 --smootherIts=2 --coarseSolverType=amg --coarseAmgXml=amg_1dof.xml"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
@@ -145,7 +145,7 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_Star2D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_linear_1.log"
@@ -153,15 +153,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_Star2D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --convergence-log=Star2D_linear_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Brick3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Brick3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Brick3D_1.log"
@@ -169,15 +169,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Brick3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Brick3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Brick3D_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_Brick3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_1dof.xml --matrixType=Brick3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_1.log"
@@ -185,15 +185,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_Brick3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_1dof.xml --matrixType=Brick3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_R_Brick3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_R_1dof.xml --matrixType=Brick3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_R_1.log"
@@ -201,15 +201,15 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_R_Brick3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_R_1dof.xml --matrixType=Brick3D --nx=19 --ny=19 --nz=10 --smootherIts=2 --convergence-log=Brick3D_linear_R_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_R_Elasticity3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_R_3dof.xml --matrixType=Elasticity3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --convergence-log=Elasticity3D_linear_R_1.log"
@@ -217,23 +217,23 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_R_Elasticity3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_R_3dof.xml --matrixType=Elasticity3D --nx=19 --ny=19 --nz=19 --smootherIts=2 --convergence-log=Elasticity3D_linear_R_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Unstructured_Laplace3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_unstructured_1dof.xml --matrixType=Laplace3D --nx=9 --ny=9 --nz=5 --smootherIts=2 --unstructured={3}"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_Elasticity3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_3dof.xml --matrixType=Elasticity3D --nx=10 --ny=10 --nz=10 --smootherIts=2 --tol=1.0e-8 --convergence-log=Elasticity3D_linear_1.log"
@@ -241,11 +241,11 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Linear_Elasticity3D_Tpetra"
     ARGS "--linAlgebra=Tpetra --xml=structured_linear_3dof.xml --matrixType=Elasticity3D --nx=7 --ny=7 --nz=7 --smootherIts=2 --tol=1.0e-8 --convergence-log=Elasticity3D_linear_4.log"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
@@ -265,7 +265,7 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 4
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_Wcycle"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --cycleType=W"
@@ -273,11 +273,11 @@ IF (${PACKAGE_NAME}_ENABLE_Tpetra AND ${PACKAGE_NAME}_ENABLE_Amesos2)
     NUM_MPI_PROCS 1
     )
 
-  MUELU_ADD_SERIAL_AND_MPI_TEST(
+  TRIBITS_ADD_TEST(
     StructuredRegionDriver
     NAME "Structured_Region_Star2D_Tpetra_Wcycle"
     ARGS "--linAlgebra=Tpetra --xml=structured_1dof.xml --matrixType=Star2D --nx=10 --ny=10 --smootherIts=2 --cycleType=W"
-    COMM serial mpi
+    COMM mpi
     NUM_MPI_PROCS 4
     )
 
