Update snapshot with fixes for failing PR-builds/tests

--- a/packages/stk/stk_unit_tests/stk_util/parallel/CMakeLists.txt
+++ b/packages/stk/stk_unit_tests/stk_util/parallel/CMakeLists.txt
@@ -44,4 +44,5 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
     TESTONLYLIBS stk_unit_main
     COMM serial mpi
     NUM_MPI_PROCS 1-6
+    NOEXEPREFIX
     )
