--- a/packages/stk/stk_unit_tests/stk_simd_old/CMakeLists.txt
+++ b/packages/stk/stk_unit_tests/stk_simd_old/CMakeLists.txt
@@ -16,8 +16,8 @@ LIST(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/UnitTestStkSimdView3d.cpp"
 TRIBITS_ADD_EXECUTABLE(
     simd_old_unit_tests
     SOURCES ${SOURCES}
-    TESTONLYLIBS stk_unit_main
     COMM serial mpi
+    NOEXEPREFIX
     )
 
 TRIBITS_ADD_TEST(
@@ -28,4 +28,5 @@ TRIBITS_ADD_TEST(
    PASS_REGULAR_EXPRESSION "PASS"
    FAIL_REGULAR_EXPRESSION "FAIL"
    NUM_MPI_PROCS 1
+   NOEXEPREFIX
    )
