--- a/packages/zoltan2/core/cmake/Zoltan2_config.h.in
+++ b/packages/zoltan2/core/cmake/Zoltan2_config.h.in
@@ -142,6 +142,12 @@
 #  define ZOLTAN2_MACHINE_DRAGONFLY
 #endif
 
+/* define if we set Enable_MACHINE_FATTREE:BOOL=ON */
+#cmakedefine ZOLTAN2CORE_MACHINE_FATTREE
+#ifdef ZOLTAN2CORE_MACHINE_FATTREE
+#  define ZOLTAN2_MACHINE_FATTREE
+#endif
+
 /* define if we set Enable_MACHINE_TORUS:BOOL=ON */
 #cmakedefine ZOLTAN2CORE_MACHINE_TORUS
 #ifdef ZOLTAN2CORE_MACHINE_TORUS
