--- a/packages/zoltan2/test/core/driver/CMakeLists.txt
+++ b/packages/zoltan2/test/core/driver/CMakeLists.txt
@@ -47,7 +47,8 @@ TRIBITS_ADD_TEST(
     FAIL_REGULAR_EXPRESSION "FAIL"
 )
 
-TRIBITS_ADD_TEST(
+IF (${PACKAGE_NAME}_ENABLE_Machine_FatTree)
+  TRIBITS_ADD_TEST(
     test_driver
     NAME geometricHierTest
     NUM_MPI_PROCS 4
@@ -56,7 +57,8 @@ TRIBITS_ADD_TEST(
     "./driverinputs/geometricHierTest.xml"
     PASS_REGULAR_EXPRESSION "PASS"
     FAIL_REGULAR_EXPRESSION "FAIL"
-)
+  )
+ENDIF()
 
 TRIBITS_ADD_TEST(
     test_driver
