--- a/packages/xpetra/test/CMakeLists.txt
+++ b/packages/xpetra/test/CMakeLists.txt
@@ -4,6 +4,7 @@ TRIBITS_INCLUDE_DIRECTORIES(REQUIRED_DURING_INSTALLATION_TESTING ${CMAKE_CURRENT
 ADD_SUBDIRECTORIES(
 # Platform
   Map
+  MapExtractor
 # Distributor
 # Directory
 # ImportExport
