--- a/packages/zoltan/src/CMakeLists.txt
+++ b/packages/zoltan/src/CMakeLists.txt
@@ -76,7 +76,7 @@ APPEND_SET(HEADERS
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/all)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   all/all_allo_const.h
   )
 
@@ -90,7 +90,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/coloring)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   coloring/coloring_const.h
   coloring/coloring.h
   coloring/g2l_hash.h
@@ -110,7 +110,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/graph)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   graph/graph.h
   graph/graph_const.h
   )
@@ -126,7 +126,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ha)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   ha/ha_const.h
   ha/ha_ovis.h
   )
@@ -143,7 +143,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/hier)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   hier/hier.h
   )
 
@@ -158,7 +158,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/hsfc)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   hsfc/hsfc.h
   hsfc/hsfc_const.h
   hsfc/hsfc_hilbert_const.h
@@ -177,7 +177,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lb)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   lb/lb_const.h
   lb/lb_init_const.h
   )
@@ -205,7 +205,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/matrix)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   matrix/zoltan_matrix.h
   )
 
@@ -223,7 +223,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/order)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   order/order_const.h
   )
 
@@ -246,7 +246,7 @@ ENDIF()
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/par)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   par/par_average_const.h
   par/par_bisect_const.h
   par/par_const.h
@@ -270,7 +270,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/params)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   params/key_params.h
   params/params_const.h
   )
@@ -293,7 +293,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/tpls)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   tpls/third_library_const.h
   tpls/third_library.h
   tpls/third_library_tools.h
@@ -311,7 +311,7 @@ APPEND_SET(SOURCES
 
 IF (${PACKAGE_NAME}_ENABLE_ParMETIS OR ${PACKAGE_NAME}_ENABLE_METIS)
 
-  APPEND_SET(NOINSTALLHEADERS
+  APPEND_SET(NONOINSTALLHEADERS
     tpls/parmetis_interface.h
     )
 
@@ -340,7 +340,7 @@ ENDIF()
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/phg)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   phg/phg_comm.h
   phg/phg_const.h
   phg/phg_distrib.h
@@ -385,7 +385,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/rcb)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   rcb/create_proc_list_const.h
   rcb/rcb_const.h
   rcb/rcb.h
@@ -416,7 +416,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/reftree)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   reftree/reftree_const.h
   reftree/reftree.h
   )
@@ -440,7 +440,7 @@ APPEND_SET(SOURCES
   simple/random.c
   )
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   simple/simple_const.h
   )
 
@@ -450,7 +450,7 @@ APPEND_SET(INSTALLHEADERS
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/timer)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   timer/timer_const.h
   )
 
@@ -467,7 +467,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Utilities/DDirectory)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Utilities/Timer)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/Utilities/shared)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   Utilities/Communication/comm.h
   Utilities/DDirectory/DD_Memory.h
   Utilities/Timer/timer.h
@@ -512,7 +512,7 @@ APPEND_SET(SOURCES
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/zz)
 
-APPEND_SET(INSTALLHEADERS
+APPEND_SET(NOINSTALLHEADERS
   zz/zz_const.h
   zz/zz_hash.h
   zz/zz_heap.h
@@ -532,6 +532,7 @@ APPEND_SET(SOURCES
   zz/zz_obj_list.c
   zz/zz_rand.c
   zz/zz_set_fn.c
+  zz/zz_set_machine.c
   zz/zz_sort.c
   zz/zz_struct.c
   zz/zz_back_trace.c
@@ -546,7 +547,7 @@ APPEND_SET(SOURCES
 IF(${PROJECT_NAME}_ENABLE_Fortran AND BUILD_ZOLTAN_F90_INTERFACE)
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/fort)
 
-  APPEND_SET(INSTALLHEADERS
+  APPEND_SET(NOINSTALLHEADERS
     fort/cwrap_fmangle.h
     fort/set_borderobjlist.fn
     fort/set_borderobjlist.if
