--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -360,15 +360,15 @@ module-load sems-gcc: 7.2.0
 use ATDM-DEFAULT:
 module-load sems-git: 2.10.1
 module-load sems-cmake: 3.10.3
-#module-unload sems-python:
+module-unload sems-python:
 #setenv PYTHONPATH: "/projects/sierra/linux_rh7/install/Python/extras/lib/python/3.6/site-packages"
-#setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.10/share/man"
-#setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
-#setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.10/share/bin:${PATH_TMP}"
-#unsetenv PATH_TMP:
-module-remove sems-python:
-module-load sems-python: 3.5.2
-setenv PYTHONPATH: "${SEMS_PYTHON_LIBRARY_PATH}/python3.5/site-packages"
-setenv MANPATH:    "${SEMS_PYTHON_LIBRARY_PATH}/../share/man"
+setenv MANPATH:    "/projects/sierra/linux_rh7/install/Python/3.6.3/share/man"
+setenv PATH_TMP:   "/projects/sierra/linux_rh7/install/Python/extras/bin:${PATH}"
+setenv PATH:       "/projects/sierra/linux_rh7/install/Python/3.6.3/share/bin:${PATH_TMP}"
+unsetenv PATH_TMP:
+#module-remove sems-python:
+#module-load sems-python: 3.5.2
+#setenv PYTHONPATH: "${SEMS_PYTHON_LIBRARY_PATH}/python3.5/site-packages"
+#setenv MANPATH:    "${SEMS_PYTHON_LIBRARY_PATH}/../share/man"
 
 
