--- a/cmake/std/pr_config/pullrequest.ini
+++ b/cmake/std/pr_config/pullrequest.ini
@@ -173,7 +173,7 @@ module-load sems-superlu  : 4.3/base
 module-load sems-git      : 2.10.1
 module-load sems-cmake    : 3.10.3
 #module-load sems-python: 3.5.2
-module-use SIERRA-PYTHON-3.6.3:
+use SIERRA-PYTHON-3.6.3:
 setenv OMP_NUM_THREADS    : 2
 
 
@@ -237,7 +237,7 @@ module-load sems-git: 2.10.1
 module-load sems-gcc: 7.2.0
 #module-load sems-python: 2.7.9
 #module-load sems-python: 3.5.2
-module-use SIERRA-PYTHON-3.6.3:
+use SIERRA-PYTHON-3.6.3:
 module-load sems-boost: 1.63.0/base
 module-load sems-zlib: 1.2.8/base
 module-load sems-hdf5: 1.10.6/base
@@ -307,7 +307,7 @@ module-load sems-gcc: 5.3.0
 module-load sems-clang: 10.0.0
 module-load sems-openmpi: 1.10.1
 #module-load sems-python: 3.5.2
-module-use SIERRA-PYTHON-3.6.3:
+use SIERRA-PYTHON-3.6.3:
 module-load sems-boost: 1.69.0/base
 module-load sems-zlib: 1.2.8/base
 module-load sems-hdf5: 1.10.6/parallel
