--- a/packages/stk/stk_unit_test_utils/stk_unit_test_utils/CMakeLists.txt
+++ b/packages/stk/stk_unit_test_utils/stk_unit_test_utils/CMakeLists.txt
@@ -61,6 +61,7 @@ IF (STK_ENABLE_UnitMain)
 
   TRIBITS_ADD_LIBRARY(
     stk_unit_main
+    TESTONLY
     SOURCES ${UNIT_MAIN_SOURCES}
   )
 ENDIF()
